
syntax  = "proto3";

option java_multiple_files = true;
option java_package = "ch.cern.cta.rpc";
option optimize_for = CODE_SIZE;
package cta.rpc;

import "google/protobuf/empty.proto";

import "cta_admin.proto";

//
// gRPC interface to CTA frontend
//
service CtaRpc {
  rpc Version (google.protobuf.Empty) returns (cta.admin.Version) {}
}